Even more removal of LinkedList usage